# Currency-Converter-v2

./: CMakeLists.txt  Item_edit_frame.cpp  about_dialog.cpp  about_dialog.h  currency_type.h  item_edit_dialog.cpp  item_edit_dialog.h  item_edit_frame.h  main.cpp  mainwindow.cpp  mainwindow.h
Resources/: MainWindow.qrc
